src/core-crm/objects/Engagement_Score_Configuration__c/Engagement_Score_Configuration__c.object-meta.xml
<CustomObject>
    <label>Engagement Score Configuration</label>
    <nameField>
        <displayFormat>EOSC-{00000}</displayFormat>
        <label>Configuration Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Score Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>