src/core-crm/objects/Engagement_Score_Configuration__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the Engagement Opportunity Score Configuration record is active or not.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>