src/core-crm/objects/Engagement_Score_Configuration__c/fields/Score_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Score_Subcategory__c</fullName>
    <description>Engagement Opportunity sub-category.</description>
    <label>Score Subcategory</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adjunct Professors</fullName>
            </value>
            <value>
                <fullName>Advisory Committee</fullName>
            </value>
            <value>
                <fullName>Aid and Development Project Partner</fullName>
            </value>
            <value>
                <fullName>Alumni Advisor</fullName>
            </value>
            <value>
                <fullName>Alumni In Residence</fullName>
            </value>
            <value>
                <fullName>Alumni Profile / Interview</fullName>
            </value>
            <value>
                <fullName>Artwork in QUT Art Museum</fullName>
            </value>
            <value>
                <fullName>Benefit user (e.g. Library, Gym)</fullName>
            </value>
            <value>
                <fullName>Business Directory Entry</fullName>
            </value>
            <value>
                <fullName>Business Referral</fullName>
            </value>
            <value>
                <fullName>Chapter / Group / Network Organiser</fullName>
            </value>
            <value>
                <fullName>Client of QUT Consultancy or Commercial Research Services</fullName>
            </value>
            <value>
                <fullName>Clinic Supervisor</fullName>
            </value>
            <value>
                <fullName>Content Writer/ Thought Leadership article</fullName>
            </value>
            <value>
                <fullName>Corporate Partner</fullName>
            </value>
            <value>
                <fullName>Course Completion (any including short courses)</fullName>
            </value>
            <value>
                <fullName>Course Enquiry (any including short courses)</fullName>
            </value>
            <value>
                <fullName>Course Enrolment (any including short courses)</fullName>
            </value>
            <value>
                <fullName>Course Participant - Customised programs (domestic &amp; global)</fullName>
            </value>
            <value>
                <fullName>Curriculum Panelist/ Reviewer</fullName>
            </value>
            <value>
                <fullName>Customised Education Partner</fullName>
            </value>
            <value>
                <fullName>Donor - In Kind</fullName>
            </value>
            <value>
                <fullName>Donor - Principal (over $100k)</fullName>
            </value>
            <value>
                <fullName>Donor - Regular (under $100k)</fullName>
            </value>
            <value>
                <fullName>Donor - Research</fullName>
            </value>
            <value>
                <fullName>Donor - Scholarship</fullName>
            </value>
            <value>
                <fullName>Donor - Student Other</fullName>
            </value>
            <value>
                <fullName>Emeritus Professors</fullName>
            </value>
            <value>
                <fullName>Entered a Competition</fullName>
            </value>
            <value>
                <fullName>Event Attendee (internal event or invited guest for external event)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>